--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-# pandas
-# numpy
-# seaborn
-# matplotlib
-# scikit-learn
-# catboost
-# xgboost
+pandas
+numpy
+seaborn
+matplotlib
+scikit-learn
+catboost
+xgboost
 dill
+Flask
 # -e .
