--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,3 +1,1 @@
-option_settings:
-  "aws:elasticbeanstalk:container:python":
-    WSGIPath: application:application
+web: uwsgi --http :8000 --wsgi-file application.py --master --processes 4 --threads 2
