--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,1 +1,3 @@
-web: uwsgi --http :8000 --wsgi-file application.py --master --processes 4 --threads 2
+option_settings:
+  "aws:elasticbeanstalk:container:python":
+    WSGIPath: application:application
